tests/ui/delegation/generics/free-fn-to-trait-infer.stderr
error[E0121]: the placeholder `_` is not allowed within types on item signatures for functions
  --> $DIR/free-fn-to-trait-infer.rs:12:15
   |
LL | reuse Trait::<_>::foo::<i32> as generic_arguments1;
   |               ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for functions
  --> $DIR/free-fn-to-trait-infer.rs:14:20
   |
LL | reuse <u8 as Trait<_>>::foo as generic_arguments2;
   |                    ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for functions
  --> $DIR/free-fn-to-trait-infer.rs:16:8
   |
LL | reuse <_ as Trait<_>>::foo as generic_arguments3;
   |        ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for functions
  --> $DIR/free-fn-to-trait-infer.rs:16:19
   |
LL | reuse <_ as Trait<_>>::foo as generic_arguments3;
   |                   ^ not allowed in type signatures

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0121`.
